Project 3 submission. Fixed columns on tablet sizes and centered at all resolutions.

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,13 +1,14 @@
 .footer {
-  height: 136px;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 20px;
+  padding-bottom: 100px;
 }
 
 .footer__copyright {
+  margin: 0;
   align-items: center;
-  max-height: 120px;
   font-family: "Poppins", Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-size: 16px;
