--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,15 +1,12 @@
 /* BACKGROUND color is FCF5E5 */
-body {
-  max-width: 1440px;
-  margin: 0 auto;
-}
+
 .page {
   background-color: #fcf5e5;
-  max-width: 1440px;
+  max-width: 100%;
+  /* max-width: 1440px; */
   margin: 0 auto;
   font-family: "Poppins-medium", Arial, Helvetica, sans-serif;
   font-weight: 500;
-  white-space: nowrap;
 }
 
 .page__section {
