--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,13 +1,13 @@
 .profile {
   display: flex;
-  margin: 34px 80px 0;
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
-  padding: 0 0 20px;
+  max-height: 210px;
+  padding: 34px 20px 20px;
 }
 
 .profile__avatar {
   margin-right: 20px;
-  border-radius: 10px;
+  border-radius: 8px;
   height: 190px;
   width: 190px;
   object-fit: contain;
@@ -16,6 +16,7 @@
 .profile__column {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
 }
 
 .profile__name {
@@ -24,7 +25,6 @@
   font-family: "Poppins-medium", sans-serif;
   font-weight: 500;
   max-width: 420px;
-  max-height: 32px;
   font-size: 32px;
   line-height: 1;
   overflow: hidden;
@@ -32,14 +32,12 @@
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
-  max-width: 420px;
 }
 
 .profile__description {
   margin: 0;
   color: rgba(33, 33, 33, 0.7);
   max-width: 100%;
-  max-height: 16px;
   font-size: 16px;
   line-height: 1;
   text-overflow: ellipsis;
@@ -57,8 +55,13 @@
   text-align: left;
 }
 
+.profile__edit-btn:hover {
+  cursor: pointer;
+}
+
 .profile__edit-btn-text {
-  color: rgba(33, 33, 33, 0.7);
+  color: rgb(33, 33, 33);
+  opacity: 0.7;
   max-height: 16px;
   line-height: 16px;
   font-size: 16px;
@@ -67,14 +70,14 @@
 }
 
 .profile__edit-btn-text:hover {
-  color: rgba(33, 33, 33, 1);
+  opacity: 1;
 }
 
-.button__pencil-svg {
+.profile__button_pencil-svg {
   margin-right: 8px;
 }
 
-.button__plus-svg {
+.profile__button_plus-svg {
   width: 12px;
   height: 12px;
 }
@@ -87,7 +90,7 @@
   align-self: end;
   background: rgba(33, 33, 33, 1);
   color: #fcf5e5;
-  padding: 18px 32px;
+  border: none;
 }
 
 .profile__add-btn:hover {
@@ -132,7 +135,7 @@
   .profile__edit-btn {
     text-align: center;
     padding: 0;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
   }
 
   .profile__add-btn {
